k8s/db2_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db2-service
  labels:
    name: db2
spec:
  type: ClusterIP
  selector:
    app: db2
  ports:
    - port: 80
      targetPort: 5000
